src/objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>Country_ISO__c</fullName>
        <formula>Pricebook2.Country_ISO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country (ISO)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Country_Standard_Price__c</fullName>
        <formula>Pricebook2.Is_Country_Standard_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Country Standard Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Service_Material__c</fullName>
        <description>To check if the product is service material</description>
        <formula>ISPICKVAL(Product2.Family, &apos;SE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Service Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_price_changed__c</fullName>
        <formula>If (OldStandardPrice__c != UnitPrice, true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is price changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MTTO_FO_Cups_Bucket__c</fullName>
        <label>MTTO FO Cups (Bucket)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TS_Operating_Bucket</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MTTO_FO_Large_Bucket__c</fullName>
        <label>MTTO FO Large (Bucket)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TS_Operating_Bucket</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MTTO_FO_Small_Bucket__c</fullName>
        <label>MTTO FO Small (Bucket)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TS_Operating_Bucket</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MTTO_MCO_Bottles_Bucket__c</fullName>
        <label>MTTO MCO Bottles (Bucket)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TS_Operating_Bucket</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MTTO_MCO_Bottles__c</fullName>
        <label>MTTO MCO Bottles</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTTO_MCO_Descaling_Bucket__c</fullName>
        <label>MTTO MCO Descaling (Bucket)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TS_Operating_Bucket</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MTTO_MCO_Descaling__c</fullName>
        <label>MTTO MCO Descaling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTTO_MCO_Ingredients_Bucket__c</fullName>
        <label>MTTO MCO Ingredients (Bucket)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TS_Operating_Bucket</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MTTO_MCO_Ingredients__c</fullName>
        <label>MTTO MCO Ingredients</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTTO_MCO_Large_Bucket__c</fullName>
        <label>MTTO MCO Large (Bucket)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TS_Operating_Bucket</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MTTO_MCO_Large__c</fullName>
        <label>MTTO MCO Large</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTTO_MCO_PM_Bucket__c</fullName>
        <label>MTTO MCO PM (Bucket)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TS_Operating_Bucket</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MTTO_MCO_PM__c</fullName>
        <label>MTTO MCO PM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTTO_MCO_Waterfilter_Bucket__c</fullName>
        <label>MTTO MCO Waterfilter (Bucket)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TS_Operating_Bucket</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MTTO_MCO_Waterfilter__c</fullName>
        <label>MTTO MCO Waterfilter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MeanTimeToOperateC__c</fullName>
        <label>MTTO FO Cups</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MeanTimeToOperateLM__c</fullName>
        <label>MTTO FO Large</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MeanTimeToOperateSM__c</fullName>
        <label>MTTO FO Small</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldStandardPrice__c</fullName>
        <label>Old Standard Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductNamehidden__c</fullName>
        <description>This field is created to contain the product name linked with the Price book entry. It is needed to have dynamic lookup for mobile solutions</description>
        <label>Product Name (hidden)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <formula>Text(Pricebook2.Sales_Organization__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_Click_Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to know if this record were already synchronized with Click.</description>
        <inlineHelpText>Indicator to know if this record were already synchronized with Click.</inlineHelpText>
        <label>Click Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TS_Click__c</fullName>
        <formula>CASE(Pricebook2.Sales_Organization__c,
&quot;SAP_0333&quot;, 1,
&quot;SAP_0111&quot;, 1,
&quot;SAP_0975&quot;, 1,
&quot;SAP_6864&quot;, 1,
&quot;SAP_6712&quot;, 1,
0) = 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Click</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TS_Load_Id__c</fullName>
        <externalId>true</externalId>
        <label>Load Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TS_ProductGroup__c</fullName>
        <formula>Product2.Material_group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
</CustomObject>